[tool.poetry]
name = "SkinLesionsApp"
version = "0.1.0"
description = ""
authors = ["RodolfoFigueroa <4rodolfofigueroa2@gmail.com@>"]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.9.2"
torch = "^1.11.0"
Pillow = "^9.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
