[tool.poetry]
name = "SkinLesionsApp"
version = "0.1.0"
description = ""
authors = ["RodolfoFigueroa <4rodolfofigueroa2@gmail.com@>"]

[tool.poetry.dependencies]
python = "^3.10"
grad-cam = "^1.3.9"
numpy = "^1.22.4"
Pillow = "^9.1.1"
pytorch-lightning = "^1.6.3"
streamlit = "^1.9.2"
torch = "^1.11.0"
torchvision = "^0.12.0"
pandas = "^1.4.2"
opencv-python-headless = "^4.5.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
